pagina curriculo: corrigindo valores de headings e adicionando titulo

--- a/etapa2-formacao/src/css/styles.css
+++ b/etapa2-formacao/src/css/styles.css
@@ -144,6 +144,10 @@ img {
     gap: 15px;
 }
 
+.curriculo__principal__conteudo__titulo {
+    padding:  0 0 3% 0;
+}
+
 .curriculo__conteudo__destaque {
     color: #4AC4FF;
 }
