--- a/etapa2-formacao/src/css/styles.css
+++ b/etapa2-formacao/src/css/styles.css
@@ -1,6 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
+:root {
+    --cor-primaria: #000000;
+    --cor-secundaria: #F6F6F6;
+    --cor-terciaria:#2DD2FF;
+    --cor-hover:#272727;
+
+    --fonte-primaria: 'Krona One', sans-serif;
+    --fonte-secundaria: 'Montserrat', sans-serif;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -11,8 +21,8 @@ body {
     /* height: 100vh; */
     box-sizing: border-box;
     /* o box-sizing: border-box; faz com que o padding e a borda sejam incluídos na largura e altura totais do elemento.  */
-    background-color: black;
-    color: #F6F6F6;
+    background-color: var(--cor-primaria);
+    color: var(--cor-secundaria)
 }
 
 .cabecalho {
@@ -25,19 +35,12 @@ body {
 }
 
 .cabecalho__menu__link {
-    font-family: "Montserrat", sans-serif;
+    font-family: var(--fonte-secundaria);
     font-size: 24px;
     font-weight: 600;
-    color:#22D4FD;
+    color: var(--cor-terciaria);
     text-decoration: none;
 }
-
-/*
-img {
-    width: 35%;
-    border-radius: 30px;
-}
-*/
 
 .apresentacao {
     padding: 5% 15%;
@@ -55,16 +58,16 @@ img {
 
 .apresentacao__conteudo__titulo {
     font-size: 36px;
-    font-family: "Krona One", sans-serif;
+    font-family: var(--fonte-primaria);
 }
 
 .titulo-destaque {
-    color: #22D4FD;
+    color: var(--cor-terciaria);
 }
 
 .apresentacao__conteudo__texto {
     font-size: 24px;
-    font-family: "Montserrat", sans-serif;
+    font-family: var(--fonte-secundaria);
 }
 
 .apresentacao__links {
@@ -76,7 +79,7 @@ img {
 }
 
 .apresentacao_links_subtitulo {
-    font-family: "Krona One", sans-serif;
+    font-family: var(--fonte-primaria);
     font-weight: 400;
     font-size: 24px;
 }
@@ -85,15 +88,15 @@ img {
     display: flex;
     justify-content: center;
     gap: 16px;
-    border: 2px solid #22D4FD;
+    border: 2px solid var(--cor-terciaria);
     width: 378px;
     text-align: center;
     border-radius: 8px;
     font-size: 24px;
     padding: 21.5px 0;
     text-decoration: none;
-    color: #F6F6F6;
-    font-family: "Montserrat", sans-serif;
+    color: var(--cor-secundaria);
+    font-family: var(--fonte-secundaria);
     font-weight: 600;
 
 }
@@ -101,7 +104,7 @@ img {
 .apresentacao__links__link:hover {
     transform: scale(1.03);
     transition: all 0.2s ease-in-out;
-    background-color: #272727;
+    background-color: var(--cor-hover);
 }
 
 .apresentacao_imagem-principal:hover {
@@ -112,9 +115,9 @@ img {
 .rodape {
     padding: 24px;
     text-align: center;
-    background-color: #22D4FD;
-    color: black;
-    font-family: "Montserrat", sans-serif;
+    background-color: var(--cor-terciaria);
+    color: var(--cor-primaria);
+    font-family: var(--fonte-secundaria);
     font-size: 24px;
     font-weight: 400;
 
@@ -134,7 +137,7 @@ img {
 
 .curriculo__principal {
     padding: 2% 15% 2% 15%;
-    font-family: "Montserrat", sans-serif;
+    font-family: var(--fonte-secundaria)
 
 }
 
@@ -149,5 +152,5 @@ img {
 }
 
 .curriculo__conteudo__destaque {
-    color: #4AC4FF;
+    color: var(--cor-terciaria)
 }
