--- a/etapa3-formacao/src/css/styles.css
+++ b/etapa3-formacao/src/css/styles.css
@@ -50,7 +50,7 @@ body {
 }
 
 .apresentacao__conteudo {
-    width: 615px;
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 40px;
@@ -84,12 +84,12 @@ body {
     font-size: 1.5rem;
 }
 
-.apresentacao__links__link {
+.apresentacao__links__navegacao {
     display: flex;
     justify-content: center;
     gap: 16px;
     border: 2px solid var(--cor-terciaria);
-    width: 378px;
+    width: 50%;
     text-align: center;
     border-radius: 8px;
     font-size: 1.5rem;
@@ -101,13 +101,17 @@ body {
 
 }
 
-.apresentacao__links__link:hover {
+.apresentacao__links__navegacao:hover {
     transform: scale(1.03);
     transition: all 0.2s ease-in-out;
     background-color: var(--cor-hover);
 }
 
-.apresentacao_imagem-principal:hover {
+.apresentacao__imagem {
+    width: 50%;
+}
+
+.apresentacao__imagem:hover {
     transform: scale(1.01);
     transition: all 0.7s ease-in-out;
 }
