adicionando responsividade aos elementos das paginas

--- a/etapa3-formacao/src/css/styles.css
+++ b/etapa3-formacao/src/css/styles.css
@@ -47,6 +47,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap:82px;
 }
 
 .apresentacao__conteudo {
@@ -157,4 +158,12 @@ body {
 
 .curriculo__conteudo__destaque {
     color: var(--cor-terciaria)
+}
+
+
+@media (max-width: 1200px) {
+    .apresentacao {
+        flex-direction: column-reverse;
+
+    }
 }
